# guyhoozdis

./: .gitattributes  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/workflows/: code-quality.yml  python-package.yml
src/guyhoozdis/ppsql/: __init__.py  ppsql.py
src/guyhoozdis/utils/: read_only.py
tests/ppsql/: conftest.py  test_ppsql.py
