[tool.poetry]
name = "guyhoozdis"
version = "0.1.0"
description = ""
authors = ["Scott Sullivan <scott.sullivan@deepcellbio.com>"]
readme = "README.md"
packages = [{include = "guyhoozdis", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
ipython = "^8.14.0"
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
