[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "guyhoozdis"
version = "0.1.0"
description = ""
authors = ["Scott Sullivan <scott.sullivan@deepcellbio.com>"]
readme = "README.md"
packages = [{include = "guyhoozdis", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
sqlparse = "^0.4.4"
sqlalchemy = "^2.0.20"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pre-commit = "^3.3.3"


[tool.poetry.group.dev.dependencies]
ipython = "^8.14.0"
ipdb = "^0.13.13"

[tool.isort]
profile = "black"

[tool.ruff]
# Let the other tools manage line length
ignore = ["E501"]
